# Talento-AI-Agent

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  subscription-plan.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/agents/: recommendation_agent.py  supervisor.py  support_agent.py
src/tools/: job_retriever_tool.py  qa_retriever_tool.py  web_search_tool.py
src/utils/: state.py
